# b-twin

./: .gitignore  CONTRIBUTING.md  README.md  install.sh  pyproject.toml
docs/: architecture-decisions.md  dashboard-implementation-spec.md  dashboard-product-spec.md  glossary.md  indexer-operations.md  release-checklist.md  release-docs-policy.md  runbook.md  weekly-kpi-reporting.md
docs/pencil/: dashboard.pen
docs/plans/: 2026-03-02-entries-resource-and-summary.md  2026-03-02-skills-paths-init.md  2026-03-03-dashboard-ui-design.md  2026-03-05-competitive-analysis.md  2026-03-05-import-implementation.md  2026-03-05-import-rules.md  2026-03-05-orchestrator-first-collab-framework.md  2026-03-05-runtime-modes-and-core-ports.md  2026-03-05-vs1-orchestrator-collab-design.md  2026-03-05-vs6-core-indexer.md  2026-03-06-common-foundation-design.md  2026-03-06-common-foundation-implementation-plan.md  2026-03-06-p1-p3-sequential-execution.md  2026-03-06-project-partitioning-design.md  2026-03-06-project-partitioning-plan.md  2026-03-06-workflow-orchestration-mvp.md  2026-03-07-dashboard-ui-and-framework-extension-todo.md  2026-03-07-dashboard-visualization-spec.md  2026-03-07-orchestration-engine-design.md  2026-03-07-orchestration-engine-implementation-plan.md
docs/reports/: 2026-03-05-btwin-openclaw-qa.md  2026-03-05-vs1-vs2-progress-report.md  2026-03-05-vs3-vs5-progress-report.md  (+14 more)
scripts/: collect_kpi_snapshot.py  doc_version_check.py  end_of_batch_sync.sh  generate_weekly_kpi_report.py  import_btwin.py  migrate_to_project_layout.py  verify_p3_operationalization.sh
(+86 files in other folders)
